Swarun: Changed website

--- a/nsf2023/index.html
+++ b/nsf2023/index.html
@@ -36,22 +36,24 @@
 	<body>
 		<div id="page-wrapper">
 
-			<!-- Header 
+			<!-- Header --> 
 				<div id="header-wrapper">
-					<header id="header" class="container">
-						<div class="row">
-							<div class="12u">
+					<header id="header" class="container"  style="height:40px">
+						<div class="row"  style="height:40px">
+							<div class="12u" style="height:40px">
 
 								<!-- Logo 
-									<h1><a href="#" id="logo">WiTech Lab</a></h1> 
+									<h1><a href="#" id="logo">WiTech Lab</a></h1>  -->
 
-								<!-- Nav 
-									<nav id="nav">
-										<a href="../index.html">Homepage</a>
-										<a href="../people.html">People</a>
-										<a href="../research.html">Research</a>
-										<a href="../publications.html">Publications</a>
-										<!--<a href="onecolumn.html">About Us</a>
+								<!-- Nav -->
+									<nav id="nav" style="height:40px">
+										<a href="#agenda">Agenda</a>
+										<a href="#keynotes">Keynotes</a>
+										<a href="#panel">Panel</a>
+										<a href="#breakouts">Breakouts</a>
+										<a href="#register">Register</a>
+
+<a href="#contact">Contact</a>
 									</nav>
 
 							</div>
@@ -64,7 +66,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p style="padding-top:50px;font-weight:bold;color:black;">NSF NeTS PI Meeting 2023 (Feb 23-24, Virtual)</p>
+										<p style="padding-top:50px;font-weight:bold;">NSF NeTS PI Meeting 2023 (Feb 23-24, Virtual)</p>
 										<!--<a href="#" class="button-big">Learn More</a> -->
 
 								</div>
@@ -153,7 +155,7 @@
 
 
 
-<div class="12u"><section>
+<div class="12u" name="agenda" id="agenda"><section>
 
 <strong><h4 style="margin-left:30px">AGENDA</h4></strong>
 <div style="margin-left:30px">
@@ -163,7 +165,7 @@
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
 <li> 1:00pm - 1:30pm: Welcome (Brief remarks by Workshop Chairs, NeTS PDs)
-<li> 1:30pm - 3:00pm: Breakout Session D1-I 
+<li> 1:30pm - 3:00pm: <a href="#breakouts">Breakout Session D1-I</a>
 <li> 3:00pm - 3:30pm: Breakout summary D1-I
 <li> 3:30pm - 4:00pm: Break
 <li> 4:00pm - 5:00pm:  Keynote I (Prof. Jim Kurose) 
@@ -180,10 +182,10 @@
 <li> 10:00am - 11:00am Keynote II (Dr. Margaret Martonosi)
 <li> 11:00am - 11:15am Day 2 Welcome (Brief remarks on agenda Workshop Chairs, NeTS PMs)
 <li> 11:15am - 12:15pm Panel Discussion D2 (Future of Networks - Dr. Ranveer Chandra, Prof. Don Towsley, Prof. Milan Yu, Prof. Xia Zhou) 
-<li> 12:15pm - 1:45pm Breakout Session D2-I
+<li> 12:15pm - 1:45pm <a href="#breakouts">Breakout Session D2-I</a>
 <li> 1:45pm - 2:30pm Break / Lunch 
 <li> 2:30pm - 3:00pm Breakout Summary D2-I 
-<li> 3:00pm - 4:30pm Breakout Session D2-II
+<li> 3:00pm - 4:30pm <a href="#breakouts">Breakout Session D2-II</a>
 <li> 4:30pm - 4:45pm Break
 <li> 4:45pm - 5:15pm Breakout summary D2-II 
 <li> 5:15pm - 5:30pm Conclusion
@@ -195,7 +197,7 @@
 </div>
 
 
-<div class="12u"><section>
+<div class="12u" name="keynotes" id="keynotes"><section>
 
 <div style="margin-left:auto;margin-right:auto"><strong><h4 style="text-align:center;margin-left:auto;margin-right:auto">KEYNOTE SPEAKERS</h4></strong></div>
 
@@ -223,7 +225,7 @@
 								</div>
 
 
-<div class="12u"><section>
+<div class="12u"  name="panel" id="panel"><section>
 
 <div style="margin-left:auto;margin-right:auto"><strong><h4 style="text-align:center;margin-left:auto;margin-right:auto">PANEL</strong> - The Future of Networks (Feb 24, 11:15 am ET)</h4></div>
 
@@ -280,9 +282,9 @@
 
 
 
-<div class="12u"><section>
+<div class="12u"  name="breakouts" id="breakouts"><section>
 
-<strong><h4 style="margin-left:30px" name="topics" id="topics">BREAKOUT TOPICS</h4></strong>
+<strong><h4 style="margin-left:30px">BREAKOUT TOPICS</h4></strong>
 
 <div style="margin-left:30px">
 <b>Breakout D1-I Topics - Thursday, Feb 23 (1:30PM - 3PM ET / 10:30AM - 12PM PT)</b><br />
@@ -342,7 +344,7 @@
 
 								</div>
 
-<div class="12u"><section>
+<div class="12u"  name="register" id="register"><section>
 
 <strong><h4 style="margin-left:30px">REGISTRATION</h4></strong>
 
@@ -357,7 +359,7 @@ The registration link for the NeTS PI meeting, to be held virtually Thursday(hal
 
 								</div>
 
-<div class="12u"><section>
+<div class="12u" name="contact" id="contact"><section>
 
 <strong><h4 style="margin-left:30px">ORGANIZERS</h4></strong>
 
