Swarun: Changed website

--- a/nsf2023/index.html
+++ b/nsf2023/index.html
@@ -38,9 +38,9 @@
 
 			<!-- Header --> 
 				<div id="header-wrapper">
-					<header id="header" class="container"  style="height:40px">
-						<div class="row"  style="height:40px">
-							<div class="12u" style="height:40px">
+					<header id="header" class="container">
+						<div class="row">
+							<div class="12u">
 
 								<!-- Logo 
 									<h1><a href="#" id="logo">WiTech Lab</a></h1>  -->
