Swarun: Changed website

--- a/nsf2023/index.html
+++ b/nsf2023/index.html
@@ -42,11 +42,11 @@
 						<div class="row">
 							<div class="12u">
 
-								<!-- Logo 
-									<h1><a href="#" id="logo">WiTech Lab</a></h1>  -->
+								<!-- Logo -->
+									<h1><a href="#" id="logo">&nbsp;</a></h1>  
 
 								<!-- Nav -->
-									<nav id="nav" style="height:40px">
+									<nav id="nav">
 										<a href="#agenda">Agenda</a>
 										<a href="#keynotes">Keynotes</a>
 										<a href="#panel">Panel</a>
@@ -58,7 +58,7 @@
 
 							</div>
 						</div>
--->
+
 					</header>
 					<div id="banner">
 						<div class="container">
@@ -452,12 +452,12 @@ The registration link for the NeTS PI meeting, to be held virtually Thursday(hal
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/skel-viewport.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/skel.min.js"></script>
+			<script src="../assets/js/skel-viewport.min.js"></script>
+			<script src="../assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
