--- a/nsf2023/index.html
+++ b/nsf2023/index.html
@@ -168,8 +168,8 @@
 <li> 1:30pm - 3:00pm: <a href="#breakouts">Breakout Session D1-I</a>
 <li> 3:00pm - 3:30pm: Breakout summary D1-I
 <li> 3:30pm - 4:00pm: Break
-<li> 4:00pm - 5:00pm:  Keynote I (Prof. Jim Kurose) 
-<li> 5:00pm - 5:30pm: Panel Discussion D1 Ask-Me-Anything with NeTS PDs
+<li> 4:00pm - 5:00pm: Keynote I (Prof. Jim Kurose) 
+<li> 5:00pm - 5:30pm: Ask-Me-Anything with NeTS PDs
 </ul>
 </div>
 
@@ -181,7 +181,7 @@
 <ul style="list-style-type: disc">
 <li> 10:00am - 11:00am Keynote II (Dr. Margaret Martonosi)
 <li> 11:00am - 11:15am Day 2 Welcome (Brief remarks on agenda Workshop Chairs, NeTS PMs)
-<li> 11:15am - 12:15pm Panel Discussion D2 (Future of Networks - Dr. Ranveer Chandra, Prof. Don Towsley, Prof. Milan Yu, Prof. Xia Zhou) 
+<li> 11:15am - 12:15pm Panel Discussion (Future of Networks - Dr. Ranveer Chandra, Prof. Don Towsley, Prof. Milan Yu, Prof. Xia Zhou) 
 <li> 12:15pm - 1:45pm <a href="#breakouts">Breakout Session D2-I</a>
 <li> 1:45pm - 2:30pm Break / Lunch 
 <li> 2:30pm - 3:00pm Breakout Summary D2-I 
