--- a/nsf2023/index.html
+++ b/nsf2023/index.html
@@ -180,8 +180,8 @@
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
 <li> 10:00am - 11:00am Keynote II (Dr. Margaret Martonosi)
-<li> 11:00am - 11:15am Day 2 Welcome (Brief remarks on agenda Workshop Chairs, NeTS PMs)
-<li> 11:15am - 12:15pm Panel Discussion (Future of Networks - Dr. Ranveer Chandra, Prof. Don Towsley, Prof. Milan Yu, Prof. Xia Zhou) 
+<li> 11:00am - 11:15am Day 2 Welcome (Brief remarks on agenda Workshop Chairs, NeTS PDs)
+<li> 11:15am - 12:15pm Panel Discussion (Future of Networks - Dr. Ranveer Chandra, Prof. Don Towsley, Prof. Minlan Yu, Prof. Xia Zhou) 
 <li> 12:15pm - 1:45pm <a href="#breakouts">Breakout Session D2-I</a>
 <li> 1:45pm - 2:30pm Break / Lunch 
 <li> 2:30pm - 3:00pm Breakout Summary D2-I 
