--- a/nsf2023/index.html
+++ b/nsf2023/index.html
@@ -179,11 +179,10 @@
 
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
-<li> 10:00am - 11:00am Keynote II (Dr. Margaret Martonosi)
 <li> 11:00am - 11:15am Day 2 Welcome (Brief remarks on agenda Workshop Chairs, NeTS PDs)
 <li> 11:15am - 12:15pm Panel Discussion (Future of Networks - Dr. Ranveer Chandra, Prof. Don Towsley, Prof. Minlan Yu, Prof. Xia Zhou) 
 <li> 12:15pm - 1:45pm <a href="#breakouts">Breakout Session D2-I</a>
-<li> 1:45pm - 2:30pm Break / Lunch 
+<li> 1:45pm - 2:30pm Keynote II (Dr. Margaret Martonosi)
 <li> 2:30pm - 3:00pm Breakout Summary D2-I 
 <li> 3:00pm - 4:30pm <a href="#breakouts">Breakout Session D2-II</a>
 <li> 4:30pm - 4:45pm Break
@@ -214,7 +213,11 @@
 <td>UMass Amherst</td><td>&nbsp;&nbsp;&nbsp;</td><td>NSF CISE</td>
 </tr>
 <tr>
-<td>(Feb 23, 4 pm ET)</td><td>&nbsp;&nbsp;&nbsp;</td><td>(Feb 24, 10 am ET)</td>
+  <td style="font-style: italic;">Networking Research and Education:</td><td>&nbsp;&nbsp;&nbsp;</td><td style="font-style: italic;">The Computer and Information Science and Engineering Landscape:</td>
+</tr>
+<tr> <td>  -- Macrotrends </td> <td> </td> <td style="font-style:italic"> -- A Look Forward</td></tr>
+<tr>
+<td>(Feb 23, 4:00 pm ET)</td><td>&nbsp;&nbsp;&nbsp;</td><td>(Feb 24, 1:45 pm ET)</td>
 </tr>
 </table>
 </div>
