Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -208,7 +208,13 @@
 
 
 																								 </a>
-																							 </center>
+											     <a href="https://yawenliu-ece.github.io/"> <figure> <img src="images/Yawen.png"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Yawen Liu</a><br></figcaption> </figure>
+
+
+																								 </a>
+												 </center>
 											</p>
 											<p>
 											</p>
