--- a/xg.html
+++ b/xg.html
@@ -165,6 +165,9 @@ This project aims to devise next-generation wireless networks that achieve faste
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
+<li><strong>Platypus: Sub-mm Micro-Displacement Sensing with Passive Millimeter-wave Tags As Phase Carriers</strong>, Thomas Horton King, Jizheng He, Chun-Kai (Sean) Yao, Akarsh Prabhakara, Mohamad Alipour, Swarun Kumar, Anthony Rowe and Elahe Soltanaghai, IPSN 2023 [<a href="platypus.html">WEBSITE</a>]<br /></li>
+<li><strong>High Resolution Point Clouds from mmWave Radar</strong>, Akarsh Prabhakara, Tao Jin, Arnav Das, Gantavya Bhatt, Lilly Kumari, Elahe Soltanaghai, Jeff Bilmes, Swarun Kumar and Anthony Rowe, ICRA 2023 [<a href="radarhd.html">WEBSITE</a>]<br /></li>
+<li><strong>The Interplay of Clustering and Evolution in the Emergence of Epidemics on Networks</strong>, Mansi Sood, Rashad Eletreby, Swarun Kumar, Chai Wah Wu, Osman Yagan, ICC 2023 [<a href="ice.html">WEBSITE</a>]<br /></li>
 <li><strong>MiLTOn: Sensing Product Integrity without Opening the Box using Non-Invasive Acoustic Vibrometry</strong>, Akshay Gadre, Deepak Vasisht, Nikunj Raghuvanshi, Bodhi Priyantha, Manikanta Kotaru, Swarun Kumar and Ranveer Chandra
 , IPSN  2022 [<a href="papers/milton-ipsn2022.pdf">PAPER</a>] [<a href="milton.html">WEBSITE</a>]<br /></li>
 <li><strong>A Community-Driven Approach to Democratize Access to Satellite Ground Stations</strong>, Vaibhav Singh, Akarsh Prabhakara, Diana Zhang, Osman Yagan and Swarun Kumar, MobiCom  2021 [<a href="papers/quasar-mobicom2021.pdf">PAPER</a>] [<a href="quasar.html">WEBSITE</a>]<br /></li>
