Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -286,7 +286,7 @@
 											</header>
 											<p>
 												<center>
-												<a href="www.linkedin.com/in/junsujang"> <figure><img src="images/Jun.jpeg"
+												<a href="https://www.linkedin.com/in/junsujang"> <figure><img src="images/Jun.jpeg"
                                                    alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
 																								 <figcaption> Junsu Jang </figcaption></figure></a>
                                         </center>
