Swarun: Changed website

--- a/tomobrush.html
+++ b/tomobrush.html
@@ -135,65 +135,33 @@
 							<div class="row">
 
 
-<div class="6u 12u(mobile)"> <section>
-<strong>Project: Wireless Sensing</h4> </strong><br /><br />
 
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project ToMoBrush:  Exploring Dental Health Sensing using a Sonic Toothbrush</h4></strong><br />
 <table style="width:100%">
 <tr>
 <td>
-<div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/sensing.png" style="width:100%; height:350px;"/>
+<div style="padding:10px;border-width:2px;border-style:solid">
+<img src="images/tomobrush.png" style="width:100%"/>
 </div>
 </td>
-</tr><tr>
+</tr>
+<tr>
 <td style="width:10px">
 <br />
 </td>
 </tr><tr>
 <td style="vertical-align:middle">
-This project aims to re-use existing wireless communication radios as <i>sensors</i>. We develop solutions to use Wi-Fi radios as material scanners that can quickly scan the environment for the presence of humans, even if they are hidden (e.g. under rubble). We also developed novel gesture based interfaces that transform ordinary surfaces, such as our clothes, into shape-aware objects that can detect our gestures and postures. The WiTech lab has developed rich literature advancing state-of-the-art wireless localization, to track objects at sub-meter accuracy indoors, where GPS does not operate.  </td>
+This paper presents ToMoBrush, a dental health sensing system that explores using off-the-shelf sonic toothbrushes for dental condition detection. Our solution leverages the fact that a sonic toothbrush produces rich acoustic signals when in contact with teeth, which contain important information about each tooth's status. ToMoBrush extracts tooth resonance signatures from the acoustic signals to characterize the dental condition of each tooth. We further develop a data-driven signal processing pipeline to detect and discriminate different dental conditions. We evaluate ToMoBrush on 19 participants and dental-standard models for detecting common dental problems including caries, calculus, and food impaction, achieving a detection ROC-AUC of 0.90, 0.83, and 0.88 respectively. Interviews with dental experts further validate ToMoBrush's potential in enhancing at-home dental healthcare. 
+</td>
 </tr>
 </table>
-<br />
-</section><section>
-<strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/05Ob8-pVwww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br /></section>
-</div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Publications</h4> </strong><br />
-<ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
-<li><strong>ToMoBrush: Exploring Dental Health Sensing using a Sonic Toothbrush</strong>, Kuang Yuan, Mohamed Ibrahim, Yiwen Song, Guoxiang Deng, Robert A. Nerone, Suvendra Vijayan, Akshay Gadre, and Swarun Kumar, UbiComp 2024 [<a href="tomobrush.html">WEBSITE</a>]<br /></li>
-<li><strong>Wireless Actuation for Soft Electronics-free Robots</strong>, Jingxian Wang, Yiwen Song, Mason Zadan, Yuyi Shen, Vanessa Chen, Carmel Majidi and Swarun Kumar, MobiCom 2023 [<a href="waser.html">WEBSITE</a>]<br /></li>
-<li><strong>Navigating Soft Robots through Wireless Heating</strong>, Yiwen Song, Mason Zadan, Kushaan Misra, Zefang Li, Jingxian Wang, Carmel Majidi and Swarun Kumar, ICRA 2023 [<a href="nsr.html">WEBSITE</a>]<br /></li>
-<li><strong>Software Defined Cooking using a Microwave Oven </strong>, Haojian Jin, Jingxian Wang, Swarun Kumar and Jason Hong, MobiCom  2019 <em>(ACM GetMobile Research Hightlight)</em> [<a href="papers/sdc-mobicom2019.pdf">PAPER</a>] [<a href="slides/sdc-mobicom2019.pdf">SLIDES</a>] [<a href="sdc.html">WEBSITE</a>]<br /></li>
-<li><strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>] [<a href="intuwition.html">WEBSITE</a>]<br /></li>
-<li><strong>Decimeter-Level Localization with a Single WiFi </strong>, Access Point, Deepak Vasisht, Swarun Kumar and Dina Katabi, NSDI  2016<br /></li>
-<li><strong>Accurate Indoor Localization with Zero Startup Cost</strong>, Swarun Kumar, Stephanie Gil, Dina Katabi and Daniela Rus, ACM MOBICOM  2014 <em>(Best Presentation Runner-up)</em> [<a href="papers/ubicarse-mobicom2014.pdf">PAPER</a>] [<a href="ubicarse.html">WEBSITE</a>]<br /></li>
-<li><strong>LTE Radio Analytics Made Easy and Accessible</strong>, Ezzeldin Hamed, Dina Katabi, and Li Erran Li, ACM SIGCOMM  2014 [<a href="papers/lteye-sigcomm2014.pdf">PAPER</a>] [<a href="lteye.html">WEBSITE</a>]<br /></li>
-</ul>
-
 </section>
 </div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Project Participants</h4> </strong><br />
-
-
-<ul style="margin-top: 10px"> 
-<li> <strong> PI: </strong> Swarun Kumar </li>
-<li> <strong> Students: </strong> 
-Diana Zhang, Haojian Jin and Junbo Zhang</li>
-<li> <strong> Collaborators: </strong> Prof. Stephanie Gil and Prof. Dina Katabi</li></ul>
-
-
-</div>
-
-
-										</section>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
+<ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
+<li> <strong>ToMoBrush: Exploring Dental Health Sensing using a Sonic Toothbrush</strong>, Kuang Yuan, Mohamed Ibrahim, Yiwen Song, Guoxiang Deng, Robert A. Nerone, Suvendra Vijayan, Akshay Gadre, and Swarun Kumar, UbiComp 2024<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
@@ -284,3 +252,4 @@ Diana Zhang, Haojian Jin and Junbo Zhang</li>
 
 	</body>
 </html>
+
