--- a/publications.html
+++ b/publications.html
@@ -145,6 +145,7 @@ Our research interests are in the area of computer networks with a special focus
 
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
+<li><strong>ToMoBrush: Exploring Dental Health Sensing using a Sonic Toothbrush</strong>, Kuang Yuan, Mohamed Ibrahim, Yiwen Song, Guoxiang Deng, Robert A. Nerone, Suvendra Vijayan, Akshay Gadre, and Swarun Kumar, UbiComp 2024 [<a href="tomobrush.html">WEBSITE</a>]<br /></li>
 <li><strong>Wireless Actuation for Soft Electronics-free Robots</strong>, Jingxian Wang, Yiwen Song, Mason Zadan, Yuyi Shen, Vanessa Chen, Carmel Majidi and Swarun Kumar, MobiCom 2023 [<a href="waser.html">WEBSITE</a>]<br /></li>
 <li><strong>Battery-free Wideband Spectrum Mapping using Commodity RFID Tags</strong>, Mohamed Ibrahim, Atul Bansal, Kuang Yuan, Swarun Kumar and Peter Steenkiste, MobiCom 2023 [<a href="rfimap.html">WEBSITE</a>]<br /></li>
 <li><strong>Platypus: Sub-mm Micro-Displacement Sensing with Passive Millimeter-wave Tags As Phase Carriers</strong>, Thomas Horton King, Jizheng He, Chun-Kai (Sean) Yao, Akarsh Prabhakara, Mohamad Alipour, Swarun Kumar, Anthony Rowe and Elahe Soltanaghai, IPSN 2023 [<a href="platypus.html">WEBSITE</a>]<br /></li>
