--- a/publications.html
+++ b/publications.html
@@ -145,7 +145,15 @@ Our research interests are in the area of computer networks with a special focus
 
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
+<li><strong>Hydra: Exploiting Multi-Bounce Scattering for Beyond-Field-of-View mmWave Radar</strong>, Nishant Mehrotra, Divyanshu Pandey, Ashutosh Sabharwal, Akarsh Prabhakara, Yawen Liu and Swarun Kumar, MobiCom 2024 [<a href="hydra.html">WEBSITE</a>]<br /></li>
+<li><strong>Guiding Energy Distribution inside Microwave Oven</strong>, Yiwen Song, Swarun Kumar, Hao Pan, Longyuan Ge, Yi-Chao Chen, and Lili Qiu, MobiCom 2024 [<a href="microsurf.html">WEBSITE</a>]<br /></li>
 <li><strong>ToMoBrush: Exploring Dental Health Sensing using a Sonic Toothbrush</strong>, Kuang Yuan, Mohamed Ibrahim, Yiwen Song, Guoxiang Deng, Robert A. Nerone, Suvendra Vijayan, Akshay Gadre, and Swarun Kumar, UbiComp 2024 [<a href="tomobrush.html">WEBSITE</a>]<br /></li>
+<li><strong>Reinforcement Learning-Based Framework for Whale Rendezvous via Autonomous Sensing Robots
+</strong>, Sushmita Bhattacharya Ninad Jadhav, Daniel Vogt, Yaniv Aluma, Pernille Tonessen, Akarsh Prabhakara, Swarun Kumar, Shane Gero, Robert J. Wood, and Stephanie Gil, Science Robotics 2024 [<a href="ceti.html">WEBSITE</a>]<br /></li>
+<li><strong>A Roadmap for the Democratization of Space-Based Communications</strong>, Veronica Muriga, Swarun Kumar, Akshitha Sriraman and Assane Gueye, HotNets 2024 [<a href="openspace.html">WEBSITE</a>]<br /></li>
+<li><strong>Towards Ubiquitous IoT through Long Range Wireless Energy Harvesting</strong>, Mohamed Ibrahim, Atul Bansal, Kuang Yuan, Junbo Zhang, and Swarun Kumar, MobiHoc 2024 [<a href="scaled.html">WEBSITE</a>]<br /></li>
+<li><strong>TranQuiL: Long Range Detection and Localization of RFI in Radio Quiet Zones</strong>, Atul Bansal,  Mohamed Ibrahim, Kuang Yuan,  Yiwen Song, Swarun Kumar and Bob Iannucci, RFI (Oral) 2024 [<a href="tranquil.html">WEBSITE</a>]<br /></li>
+<li><strong>Adapting LoRa Ground Stations for Low-latency Imaging and Inference from LoRa-enabled CubeSats</strong>, Akshay Gadre, Zachary Machester, and Swarun Kumar, ACM ToSN 2024 [<a href="vista.html">WEBSITE</a>]<br /></li>
 <li><strong>Wireless Actuation for Soft Electronics-free Robots</strong>, Jingxian Wang, Yiwen Song, Mason Zadan, Yuyi Shen, Vanessa Chen, Carmel Majidi and Swarun Kumar, MobiCom 2023 [<a href="waser.html">WEBSITE</a>]<br /></li>
 <li><strong>Battery-free Wideband Spectrum Mapping using Commodity RFID Tags</strong>, Mohamed Ibrahim, Atul Bansal, Kuang Yuan, Swarun Kumar and Peter Steenkiste, MobiCom 2023 [<a href="rfimap.html">WEBSITE</a>]<br /></li>
 <li><strong>Platypus: Sub-mm Micro-Displacement Sensing with Passive Millimeter-wave Tags As Phase Carriers</strong>, Thomas Horton King, Jizheng He, Chun-Kai (Sean) Yao, Akarsh Prabhakara, Mohamad Alipour, Swarun Kumar, Anthony Rowe and Elahe Soltanaghai, IPSN 2023 [<a href="platypus.html">WEBSITE</a>]<br /></li>
