--- a/sensing.html
+++ b/sensing.html
@@ -165,7 +165,11 @@ This project aims to re-use existing wireless communication radios as <i>sensors
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
+<li><strong>Hydra: Exploiting Multi-Bounce Scattering for Beyond-Field-of-View mmWave Radar</strong>, Nishant Mehrotra, Divyanshu Pandey, Ashutosh Sabharwal, Akarsh Prabhakara, Yawen Liu and Swarun Kumar, MobiCom 2024 [<a href="hydra.html">WEBSITE</a>]<br /></li>
+<li><strong>Guiding Energy Distribution inside Microwave Oven</strong>, Yiwen Song, Swarun Kumar, Hao Pan, Longyuan Ge, Yi-Chao Chen, and Lili Qiu, MobiCom 2024 [<a href="microsurf.html">WEBSITE</a>]<br /></li>
 <li><strong>ToMoBrush: Exploring Dental Health Sensing using a Sonic Toothbrush</strong>, Kuang Yuan, Mohamed Ibrahim, Yiwen Song, Guoxiang Deng, Robert A. Nerone, Suvendra Vijayan, Akshay Gadre, and Swarun Kumar, UbiComp 2024 [<a href="tomobrush.html">WEBSITE</a>]<br /></li>
+<li><strong>Reinforcement Learning-Based Framework for Whale Rendezvous via Autonomous Sensing Robots
+</strong>, Sushmita Bhattacharya Ninad Jadhav, Daniel Vogt, Yaniv Aluma, Pernille Tonessen, Akarsh Prabhakara, Swarun Kumar, Shane Gero, Robert J. Wood, and Stephanie Gil, Science Robotics 2024 [<a href="ceti.html">WEBSITE</a>]<br /></li>
 <li><strong>Wireless Actuation for Soft Electronics-free Robots</strong>, Jingxian Wang, Yiwen Song, Mason Zadan, Yuyi Shen, Vanessa Chen, Carmel Majidi and Swarun Kumar, MobiCom 2023 [<a href="waser.html">WEBSITE</a>]<br /></li>
 <li><strong>Navigating Soft Robots through Wireless Heating</strong>, Yiwen Song, Mason Zadan, Kushaan Misra, Zefang Li, Jingxian Wang, Carmel Majidi and Swarun Kumar, ICRA 2023 [<a href="nsr.html">WEBSITE</a>]<br /></li>
 <li><strong>Software Defined Cooking using a Microwave Oven </strong>, Haojian Jin, Jingxian Wang, Swarun Kumar and Jason Hong, MobiCom  2019 <em>(ACM GetMobile Research Hightlight)</em> [<a href="papers/sdc-mobicom2019.pdf">PAPER</a>] [<a href="slides/sdc-mobicom2019.pdf">SLIDES</a>] [<a href="sdc.html">WEBSITE</a>]<br /></li>
