--- a/tranquil.html
+++ b/tranquil.html
@@ -135,76 +135,33 @@
 							<div class="row">
 
 
-<div class="6u 12u(mobile)"> <section>
-<strong>Project: Towards Battery-Free Wireless Communication and Sensing</h4> </strong><br /><br />
 
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project TranQuiL:  Long Range Detection and Localization of RFI in Radio Quiet Zones</h4></strong><br />
 <table style="width:100%">
 <tr>
 <td>
-<div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/bfree.png" style="width:100%; height:350px;"/>
+<div style="padding:10px;border-width:2px;border-style:solid">
+<img src="images/tranquil.png" style="width:100%"/>
 </div>
 </td>
-</tr><tr>
+</tr>
+<tr>
 <td style="width:10px">
 <br />
 </td>
 </tr><tr>
 <td style="vertical-align:middle">
-This project aims to ask: Can we connect to battery-free devices over extremely long distances? We develop the state-of-the-art longest range connectivity solution for completely battery-free commercial RFID tags, by exploiting collaboration between many distributed RFID readers. We explore several opportunities that such a system can produce. Imagine being able to track the location of every object around you over extended distances, by simply attaching a battery-free sticker. The WiTech lab's research has developed solutions for smart infrastructure monitoring, gesture-based interfaces and on-body sensing using battery-free networks. </td>
+We present TranQuiL, a novel long-range detection and localization system that can detect and localize an interfering transmitter at large distances. Our key innovation is the development of an enhanced beacon packet detection pipeline which enables significant range improvement. We implement and evaluate our system for an interfering WiFi and Bluetooth transmitter across two testbeds: (1) the Green Bank Observatory in West Virginia and (2) around a large manufacturing facility in Pittsburgh PA. 
+</td>
 </tr>
 </table>
-<br />
-</section><section>
-<strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/1Z1DbU8kDak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br /></section>
-</div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Publications</h4> </strong><br />
-<ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
-<li><strong>Towards Ubiquitous IoT through Long Range Wireless Energy Harvesting</strong>, Mohamed Ibrahim, Atul Bansal, Kuang Yuan, Junbo Zhang, and Swarun Kumar, MobiHoc 2024 [<a href="scaled.html">WEBSITE</a>]<br /></li>
-<li><strong>TranQuiL: Long Range Detection and Localization of RFI in Radio Quiet Zones</strong>, Atul Bansal,  Mohamed Ibrahim, Kuang Yuan,  Yiwen Song, Swarun Kumar and Bob Iannucci, RFI (Oral) 2024 [<a href="tranquil.html">WEBSITE</a>]<br /></li>
-<li><strong>Battery-free Wideband Spectrum Mapping using Commodity RFID Tags</strong>, Mohamed Ibrahim, Atul Bansal, Kuang Yuan, Swarun Kumar and Peter Steenkiste, MobiCom 2023 [<a href="rfimap.html">WEBSITE</a>]<br /></li>
-<li><strong>NFCapsule: An Ingestible Sensor Pill for Eosinophilic Esophagitis Detection Based on Near-field Coupling</strong>, Junbo Zhang, Gaurav Balakrishnan, Sruti Srinidhi, Arnav Bhat, Swarun Kumar and Christopher Bettinger, SenSys 2022 [<a href="papers/nfcapsule-sensys2022.pdf">PAPER</a>] [<a href="nfcapsule.html">WEBSITE</a>]<br /></li>
-<li><strong>PLatter: On the Feasibility of Building-scale Power Line Backscatter</strong>, Junbo Zhang, Elahe Soltanaghaei, Artur Balanuta, Reese Grimsley, Swarun Kumar and Anthony Rowe, NSDI 2022 [<a href="papers/platter-nsdi2022.pdf">PAPER</a>] [<a href="platter.html">WEBSITE</a>]<br /></li>
-<li><strong>Exploring mmWave Radar and Camera Fusion for High-Resolution and Long-Range Depth Imaging</strong>, Akarsh Prabhakara (Co-Primary), Diana Zhang (Co-Primary), Chao Li, Sirajum Munir, Aswin Sankaranarayanan, Anthony Rowe and Swarun Kumar, IROS 2022 [<a href="papers/metamoran-iros2022.pdf">PAPER</a>] [<a href="slides/metamoran-iros2022.pdf">SLIDES</a>] [<a href="metamoran.html">WEBSITE</a>]<br /></li>
-<li><strong>Toolbox Release: A WiFi-Based Relative Bearing Sensor for Robotics</strong>, Ninad Jadhav, Weiying Wang, Diana Zhang, Swarun Kumar and Stephanie Gil, IROS 2022 [<a href="wsr.html">WEBSITE</a>]<br /></li>
-<li><strong>Ultra Low-Latency Backscatter for Fast-moving Location Tracking</strong>, Jingxian Wang, Vaishnavi Ranganathan, Jonathan Lester and Swarun Kumar, UbiComp 2022 [<a href="fastloc.html">WEBSITE</a>]<br /></li>
-<li><strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 <em>(Best Paper Honorable Mention)</em> [<a href="papers/osprey-mobisys2020.pdf">PAPER</a>] [<a href="slides/osprey-mobisys2020.pptx">SLIDES</a>] [<a href="osprey.html">WEBSITE</a>]<br /></li>
-<li><strong>Osprey Demo: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="osprey.html">WEBSITE</a>]<br /></li>
-<li><strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020 [<a href="nofacecontact.html">WEBSITE</a>]<br /></li>
-<li><strong>Poster: Does Ambient RF Energy Suffice to Power Battery-free IoT?</strong>, Atul Bansal, Swarun Kumar and Bob Iannucci, MobiSys  2020 [<a href="wira.html">WEBSITE</a>]<br /></li>
-<li><strong>RFID Tattoo: A Wireless Platform for Speech Recognition </strong>, Jingxian Wang, Chengfeng Pan, Haojian Jin, Vaibhav Singh, Yash Jain, Jason Hong, Carmel Majidi and Swarun Kumar, UbiComp  2020 <em>(Best Wearables Long Paper)</em> [<a href="papers/rftattoo-ubicomp2020.pdf">PAPER</a>] [<a href="rftattoo.html">WEBSITE</a>]<br /></li>
-<li><strong>You foot the bill! Attacking NFC with passive relays</strong>, Yuyi Sun, Swarun Kumar, Shibo He, Jiming Chen and Zhiguo Shi, IEEE IoT Journal 2020 [<a href="recoil.html">WEBSITE</a>]<br /></li>
-<li><strong>Silver-Coated PDMS Beads for Soft, Stretchable, and Thermally Stable Conductive Elastomer Composites </strong>,  Chengfeng Pan, Yun Sik Ohm, Jingxian Wang, Michael J. Ford, Kitty Kumar, Swarun Kumar, and Carmel Majidi, ACS applied materials and interfaces  2019<br /></li>
-<li><strong>Sozu: Self-Powered Radio Tags for Building-Scale Activity Sensing </strong>, Yang Zhang, Yasha Iravantchi, Haojian Jin, Swarun Kumar, and Chris Harrison, UIST  2019 [<a href="papers/sozu-uist2019.pdf">PAPER</a>] [<a href="sozu.html">WEBSITE</a>]<br /></li>
-<li><strong>Pushing the Range Limits of Commercial Passive RFIDs </strong>, Jingxian Wang, Junbo Zhang, Rajarshi Saha, Haojian Jin, Swarun Kumar, NSDI  2019 [<a href="papers/pushid-nsdi2019.pdf">PAPER</a>] [<a href="pushid.html">WEBSITE</a>]<br /></li>
-<li><strong>WiSh: Towards a Wireless Shape-aware World </strong>, Haojian Jin, Jingxian Wang, Zhijian Yang, Swarun Kumar, Jason Hong, MobiSys  2018 [<a href="papers/wish-mobisys2018.pdf">PAPER</a>] [<a href="wish.html">WEBSITE</a>]<br /></li>
-<li><strong>Towards Wearable Everyday Body-Frame Tracking </strong>, Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, UbiComp  2018 <em>(Best Demo Honorable Mention)</em> [<a href="papers/rfwear-ubicomp2018.pdf">PAPER</a>] [<a href="slides/rfwear-ubicomp2018.pdf">SLIDES</a>] [<a href="rfwear.html">WEBSITE</a>]<br /></li>
-</ul>
-
 </section>
 </div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Project Participants</h4> </strong><br />
-
-
-<ul style="margin-top: 10px"> 
-<li> <strong> PI: </strong> Swarun Kumar </li>
-<li> <strong> Students: </strong> 
-Jingxian Wang, Haojian Jin and Junbo Zhang</li>
-<li> <strong> Collaborators: </strong> Prof. Jason Hong, Prof. Carmel Majidi and Prof. Chris Harrison</li></ul>
-
-
-</div>
-
-
-										</section>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
+<ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
+<li> <strong>TranQuiL: Long Range Detection and Localization of RFI in Radio Quiet Zones</strong>, Atul Bansal,  Mohamed Ibrahim, Kuang Yuan,  Yiwen Song, Swarun Kumar and Bob Iannucci, RFI (Oral) 2024<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
@@ -295,3 +252,4 @@ Jingxian Wang, Haojian Jin and Junbo Zhang</li>
 
 	</body>
 </html>
+
