--- a/publications.html
+++ b/publications.html
@@ -145,6 +145,10 @@ Our research interests are in the area of computer networks with a special focus
 
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
+<li><strong>Shape-programming Robotic Reflectors for Wireless Networks</strong>, Yawen Liu, Akarsh Prabhakara, Jiangyifei Zhu, Shenyi Qiao, Swarun Kumar, ICRA 2025 [<a href="papers/metamorph-icra2025.pdf">PAPER</a>] [<a href="metamorph.html">WEBSITE</a>]<br /></li>
+<li><strong>Frequency-selective actuation of liquid crystalline elastomer actuators with radio-frequency</strong>, Yiwen Song, Zefang Li, Mason Zadan, Jingxian Wang, Swarun Kumar, Carmel Majidi, Nature Communications 2025 [<a href="rfact.html">WEBSITE</a>]<br /></li>
+<li><strong>Thermo-Mechanically Stable, Liquid Metal Embedded Soft Materials for High-Temperature Applications</strong>, Robert Herbert, Piotr Mocny, Yuqi Zhao, Ting-Chih Lin, Junbo Zhang, Michael Vinciguerra, Sunny Surprenant, Wui Yarn Daphne Chan, Swarun Kumar, Michael R. Bockstaller, Krzysztof Matyjaszewski, Carmel Majidi, Advanced Functional Materials 2024 [<a href="viton.html">WEBSITE</a>]<br /></li>
+<li><strong>Reinforcement learning–based framework for whale rendezvous via autonomous sensing robots</strong>, Nishant Mehrotra, Divyanshu Pandey, Ashutosh Sabharwal, Akarsh Prabhakara, Yawen Liu and Swarun Kumar, Science Robotics 2024 [<a href="avatars.html">WEBSITE</a>]<br /></li>
 <li><strong>Hydra: Exploiting Multi-Bounce Scattering for Beyond-Field-of-View mmWave Radar</strong>, Nishant Mehrotra, Divyanshu Pandey, Ashutosh Sabharwal, Akarsh Prabhakara, Yawen Liu and Swarun Kumar, MobiCom 2024 [<a href="hydra.html">WEBSITE</a>]<br /></li>
 <li><strong>Guiding Energy Distribution inside Microwave Oven</strong>, Yiwen Song, Swarun Kumar, Hao Pan, Longyuan Ge, Yi-Chao Chen, and Lili Qiu, MobiCom 2024 [<a href="microsurf.html">WEBSITE</a>]<br /></li>
 <li><strong>ToMoBrush: Exploring Dental Health Sensing using a Sonic Toothbrush</strong>, Kuang Yuan, Mohamed Ibrahim, Yiwen Song, Guoxiang Deng, Robert A. Nerone, Suvendra Vijayan, Akshay Gadre, and Swarun Kumar, UbiComp 2024 [<a href="tomobrush.html">WEBSITE</a>]<br /></li>
